_sass/modules/_m-sponsors.scss
.m-sponsors {
  ul {
    @include flexbox;
    @include flex-wrap(wrap);
    @include align-items(center);
    @include justify-content(space-evenly);
    padding: 20px 0;
  }
  .m-sponsors--gold {
    li {
      flex-basis: 40%;

    }
  }
  li {
    flex-basis: 20%;
    list-style: none;
    flex-grow: 0;
    padding: 1%;
    img {
      margin-bottom: 10px;
    }
    @media(max-width: $width-small) {
      flex-basis: 45%;
    }

    &:last-of-type {
      margin-right: 0;
    }
  }
  a {
    border: 0;
  }
  img {
    width: 100%;
  }
}

